# Distributed-Instant-Messaging-System-Development

./: .gitignore  .gitmodules  CMakeLists.txt  DistributedIMSystem.sql  README.md
balance-server/: CMakeLists.txt  Dockerfile  README.md  config.ini
balance-server/include/config/: ServerConfig.hpp
balance-server/include/grpc/: GrpcBalancerImpl.hpp  GrpcChattingImpl.hpp  GrpcDataLayer.hpp  GrpcResourcesImpl.hpp  GrpcUserServiceImpl.hpp
balance-server/include/message/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
balance-server/include/network/: def.hpp
balance-server/include/redis/: RedisContextRAII.hpp
balance-server/include/tools/: tools.hpp
balance-server/proto/: message.proto
balance-server/src/: DistributedSpinRedisLock.cpp  GrpcBalancerImpl.cpp  GrpcChattingImpl.cpp  GrpcDataLayer.cpp  GrpcResourcesImpl.cpp  GrpcUserServiceImpl.cpp  RedisContextRAII.cpp  RedisManager.cpp  main.cpp
captcha-server/: package-lock.json  package.json
chatting-client/: ByteOrderConverter.hpp  CMakeLists.txt  ChattingMessageBuffer.hpp  ChattingThreadDef.hpp  MsgNode.hpp  UserDef.hpp  UserNameCard.h  addnewuserstackwidget.cpp  addusernamecarddialog.cpp  addusernamecarddialog.h  addusernamecardwidget.cpp  addusernamecardwidget.h  adduserrequestdialog.cpp  adduserrequestdialog.h  authenticatenewfriendrequestdialog.cpp  authenticatenewfriendrequestdialog.h  chattingcontactitem.cpp  chattingcontactitem.h  chattingcontactlist.cpp  chattingcontactlist.h  chattingdlgmainframe.cpp  chattingdlgmainframe.h  chattingdlgmainframe.ui  chattinghistorywidget.cpp  chattinghistorywidget.h  chattingmsgitem.cpp  chattingmsgitem.h  chattingstackpage.cpp  chattingstackpage.h  chattingtcpnetwork.cpp  chattingtcpnetwork.h  config.ini  contactsprofile.cpp  contactsprofile.h  def.hpp  filetcpnetwork.cpp  filetcpnetwork.h  filetransferdialog.cpp  filetransferdialog.h  filetransferdialog.ui  (+37 more)
chatting-server/: CMakeLists.txt  README.md  config.ini
chatting-server/include/buffer/: MsgNode.hpp
chatting-server/include/chat/: ChattingThreadDef.hpp
chatting-server/include/config/: ServerConfig.hpp
chatting-server/include/grpc/: GrpcBalanceService.hpp  GrpcDistributedChattingImpl.hpp  GrpcDistributedChattingService.hpp  GrpcRegisterChattingService.hpp  GrpcUserService.hpp  RegisterChattingServicePool.hpp  UserServicePool.hpp
chatting-server/include/handler/: SyncLogic.hpp
chatting-server/include/message/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
chatting-server/include/network/: def.hpp
chatting-server/include/redis/: RedisContextRAII.hpp  RedisManager.hpp
chatting-server/include/server/: AsyncServer.hpp  Session.hpp  UserManager.hpp
chatting-server/include/service/: ConnectionPool.hpp
chatting-server/include/spinlock/: DistributedSpinRedisLock.hpp
chatting-server/include/sql/: MySQLConnection.hpp
chatting-server/include/tools/: magic_enum.hpp  tools.hpp
chatting-server/include/user/: UserDef.hpp  UserManager.hpp
chatting-server/proto/: message.proto
chatting-server/src/: AsyncServer.cpp  ChatBusinessLogic.cpp  DistributedSpinRedisLock.cpp  GrpcBalanceService.cpp  GrpcChattingRegisterService.cpp  GrpcDistributedChattingImpl.cpp  GrpcDistributedChattingService.cpp  MySQLConnection.cpp  MySQLConnectionPool.cpp  RedisContextRAII.cpp  RedisManager.cpp  Session.cpp  SyncLogic.cpp  UserManager.cpp  main.cpp
common/include/service/: IOServicePool.hpp
conf/: ClearTestData.sql  CreateTestData.sql  DistributedIMSystem.sql  mysql.cnf  redis.conf
gateway-server/: CMakeLists.txt  README.md  config.ini
gateway-server/include/config/: ServerConfig.hpp
gateway-server/include/grpc/: GrpcUserService.hpp  UserServicePool.hpp  VerificationServicePool.hpp
gateway-server/include/message/: message.grpc.pb.h
gateway-server/include/network/: def.hpp
gateway-server/include/service/: ConnectionPool.hpp
gateway-server/include/sql/: MySQLConnectionPool.hpp
gateway-server/include/tools/: tools.hpp
gateway-server/proto/: message.proto
gateway-server/src/: GateServer.cpp  HandleMethod.cpp  HttpConnection.cpp  MySQLConnection.cpp  MySQLConnectionPool.cpp  RedisManager.cpp  main.cpp
im-benchmark/: CMakeLists.txt  README.md  linux_bench_setup.sh  macos_bench_setup.sh  windows_bench_setup.ps1
im-benchmark/im-bench-client/: CMakeLists.txt
im-benchmark/im-bench-client/include/: def.hpp  echo_client.h  protocol.h
im-benchmark/im-bench-client/src/: echo_client.cpp  main.cpp
im-benchmark/im-bench-server/: CMakeLists.txt
im-benchmark/im-bench-server/include/: IOServicePool.hpp  def.hpp  echo_server.h  echo_session.h  protocol.h
im-benchmark/im-bench-server/src/: IOServicePool.cpp  echo_server.cpp  echo_session.cpp  main.cpp
im-benchmark/scripts/: analyze_rtt.py  linux_bench_setup.sh  macos_bench_setup.sh  windows_bench_setup.ps1
resources-server/: CMakeLists.txt  README.md  config.ini
resources-server/include/buffer/: ByteOrderConverter.hpp  MsgNode.hpp
resources-server/include/config/: ServerConfig.hpp
resources-server/include/dispatcher/: FileProcessingDispatcher.hpp  RequestHandlerDispatcher.hpp
resources-server/include/grpc/: GrpcResourcesRegisterService.hpp  GrpcResourcesService.hpp  ResourcesRegisterServicePool.hpp  ResourcesServicePool.hpp
resources-server/include/handler/: SyncLogic.hpp  (+2 more)
resources-server/proto/: message.proto
resources-server/src/: AsyncServer.cpp  FileHasherLogger.cpp  FileProcessingDispatcher.cpp  FileProcessingNode.cpp  GrpcResourcesRegisterService.cpp  GrpcResourcesService.cpp  MySQLConnection.cpp  MySQLConnectionPool.cpp  RedisContextRAII.cpp  RequestHandlerDispatcher.cpp  RequestHandlerNode.cpp  Session.cpp  SyncLogic.cpp  UserManager.cpp  main.cpp
tests/: CMakeLists.txt
tests/test_helloworld/: CMakeLists.txt  test_helloworld.cc
(+16 files in other folders)
